ref: shopping-cart: рефакторинг